takamaka_examples/src/takamaka/tests/errors/inconsistentpayable2/Super.java
package takamaka.tests.errors.inconsistentpayable2;

import io.takamaka.code.annotations.Entry;
import io.takamaka.lang.Contract;

public class Super extends Contract {
	public @Entry void m() {}
}